--- a/package.json
+++ b/package.json
@@ -4,8 +4,18 @@
   "description": "Node js server for lab6",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "Bohdan Lytvynov",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "jquery": "^3.7.1",
+    "sqlite3": "^5.1.7"
+  }
 }
